--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-bootstrap": "^3.1.4",
+    "ember-can": "^1.1.1",
     "ember-cli": "~3.1.4",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
@@ -39,10 +40,13 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-promise-helpers": "^2.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.1.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
+    "fs": "0.0.1-security",
+    "json-server": "^0.16.3",
     "loader.js": "^4.2.3",
     "sass": "^1.49.0"
   },
